fixed weird table row css paint issue on mobile

--- a/src/components/dashboard/ManageJobs.css
+++ b/src/components/dashboard/ManageJobs.css
@@ -11,11 +11,11 @@
 .ManageJobs-header,
 .Applicants-header,
 .SavedJobs-header,
-.Projects-header, {
+.Projects-header {
   text-align: center;
 }
 
-table {
+tbody > tr {
   background: #F5F5F5;
 }
 
